--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 
 <html>
-
+  
 <head>
   <img src="WebBanner2023.png" alt="Banner" width="900" height="300" >
+    <h1><b>ENG0018 Computer Laboratory 2025/26<b></h1>
+    <h2>Student URN: 6614299</h2>
 </head>
+
 
 </html>
