--- a/index.html
+++ b/index.html
@@ -7,8 +7,29 @@
     <h1><b>ENG0018 Computer Laboratory 2025/26<b></h1>
     <h2>Student URN: 6614299</h2>
   <hr>
-  <h2 style="font-family:calibri;"><b>Conference paper: Bridge Deck Repairs</b></h2>h2>
+  <h2 style="font-family:calibri;"><b>Conference paper: Bridge Deck Repairs</b></h2>
   <hr>
+
+  <!style for tables>
+      <style>
+        table {
+          font-family: arial, sans0serif;
+          border-collapse: collapse;
+          width: 30%;
+
+        }
+
+        td, th {
+          border: 1px solid #dddddd;
+        }
+        
+      </style>
+
+      <style>
+    p.ex1 {
+      margin 0 left: 250px;
+    }
+    </style>
 </head>
 
 
