Adding my work to the webpage
Majority of the content being added to webpage. Still many tweeks to be made.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1><b>ENG0018 Computer Laboratory 2025/26<b></h1>
     <h2>Student URN: 6614299</h2>
   <hr>
-  <h2 style="font-family:calibri;"><b>Conference paper: Bridge Deck Repairs</b></h2>
+  <h2 style="font-family:calibri;"><b>Conference paper: : How FIA (Fédération Internationale de l'Automobile) regulations shape the evolution of aerodynamics in Formula 1</b></h2>
   <hr>
 
   <!style for tables>
@@ -30,6 +30,7 @@
       margin 0 left: 250px;
     }
     </style>
+</head>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https:///www.w3schools.com/w3css/4/w3.css">
@@ -39,16 +40,50 @@
 
 <body style="background-color:#FFFFFF;margin-left:50px;">
 
-<hr>
-  <h3 id="Abstract">Abstract</h3>
+<body>
+<img src="WebBanner2023.png" alt="Banner" width="900" height="300" />
 
-<p class="ex1">
+
+<h1><b>ENG0018 Computer Laboratory 2025/26</b></h1>
+<h2>Student URN: 6614299</h2>
+<hr />
+
+
+<h2 style="font-family: Calibri;"><b>Conference paper: How FIA (Fédération Internationale de l'Automobile) regulations shape the evolution of aerodynamics in Formula 1</b></h2>
+<hr />
+
+
+<h3 id="Abstract">Abstract</h3>
+<div class="ex1">
 <pre>
-  This paper presents a novel adaptive active learning strategy. The most accurate classification model from a heterogenous classifier pool is selected at each learning epoch. Our goal is to achive greater incremental improvement in accuracy, compared to using a single type of classification model throughout the process. The strategy is evaluated on benchmark data sets. We further consider an application to texture classification problems in sonar mosaic imagery and compare it with the non-adaptive active learning and traditional machine learning approaches. Our results show that...We conclude that...
+This paper will address some of the regulation changes that most directly affect aerodynamics brought in by the FIA in the last 20 years. It will delve into how teams have adapted in response to these changes and discuss implications of these new designs. It will also consider a future rule change that will come into effect in the 2026 season.
 </pre>
+</div>
+
+
+<h3 id="Introduction">Introduction</h3>
+<div class="ex1">
+<p>
+Formula 1 is the pinnacle of motorsports with roughly 800 million fans worldwide (Brittle, 2025). In this sport, the slightest changes to the vehicle can drastically change the outcome of a race. The Fédération Internationale de l'Automobile (FIA) enforces a rulebook ensuring safe and fair competition. Over the past two decades the FIA regulations have directly affected the aerodynamic design of the cars.
 </p>
-</pre>
-</head>
+</div>
+
+
+<h3 id="Regulations">2.1 – 2009 Regulations</h3>
+<div class="ex1">
+<p>
+The 2009 regulations were introduced (Fédération Internationale de l'Automobile, 2009) primarily to reduce the wake from a leading car to improve overtaking. The biggest changes include:
+</p>
+<ul>
+<li>Front wing – became wider and moved lower</li>
+<li>Rear wing – became thinner and taller</li>
+<li>Surface appendages – restricted, forcing simpler bodywork</li>
+</ul>
+<p>
+These changes led to whole car redesigns to balance the front and rear downforce. Teams focused innovation on diffuser interactions.
+</p>
+<p>
+</body>
 
 
 </html>
