--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1><b>ENG0018 Computer Laboratory 2025/26<b></h1>
     <h2>Student URN: 6614299</h2>
   <hr>
-  <h2 style="font-family:calibri;"><b>Conference paper: : How FIA (Fédération Internationale de l'Automobile) regulations shape the evolution of aerodynamics in Formula 1</b></h2>
+  <h2 style="font-family:calibri;"><b>Conference paper: : How FIA regulations shape the evolution of aerodynamics in Formula 1</b></h2>
   <hr>
 
   <!style for tables>
@@ -29,8 +29,21 @@
     p.ex1 {
       margin 0 left: 250px;
     }
-    </style>
-</head>
+  </style>
+    </head>
+
+
+<!table of contents>
+      <table>
+        <tr>
+          <th><h3>Table of contents</h3></th>
+        </tr>
+        <tr>
+          <td><a href="#</td>
+        </tr>
+        </tr>
+      </table>
+
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https:///www.w3schools.com/w3css/4/w3.css">
@@ -39,13 +52,6 @@
 </style>
 
 <body style="background-color:#FFFFFF;margin-left:50px;">
-
-<body>
-<img src="WebBanner2023.png" alt="Banner" width="900" height="300" />
-
-
-<h2 style="font-family: Calibri;"><b>Conference paper: How FIA (Fédération Internationale de l'Automobile) regulations shape the evolution of aerodynamics in Formula 1</b></h2>
-<hr />
 
 
 <h3 id="Abstract">Abstract</h3>
