Adding graph and stuff

--- a/index.html
+++ b/index.html
@@ -34,15 +34,29 @@
 
 
 <!table of contents>
-      <table>
-        <tr>
-          <th><h3>Table of contents</h3></th>
-        </tr>
-        <tr>
-          <td><a href="#</td>
-        </tr>
-        </tr>
-      </table>
+<table>
+  <tr>
+    <th><h3>Table of contents</h3></th>
+  </tr>
+  <tr>
+    <td><a href="#Abstract">Abstract</td>
+  </tr>
+  <tr>
+    <td><a href="#1. Introduction">1. Introduction</td>
+  </tr>
+  <tr>
+    <td><a href="#2.1 2009">2.1 2009</td>
+  </tr>
+  <tr>
+    <td><a href="#2.2 2022">2.2 2022</td>
+  </tr>
+  <tr>
+    <td><a href="#2.3 2026">2.3 2026</td>
+  </tr>
+  <tr>
+    <td><a href="#References">References</td>
+  </tr>
+</table>
 
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -62,7 +76,7 @@ This paper will address some of the regulation changes that most directly affect
 </div>
 
 
-<h3 id="Introduction">Introduction</h3>
+<h3 id="1. Introduction">1. Introduction</h3>
 <div class="ex1">
 <p>
 Formula 1 is the pinnacle of motorsports with roughly 800 million fans worldwide (Brittle, 2025). In this sport, the slightest changes to the vehicle can drastically change the outcome of a race. The Fédération Internationale de l'Automobile (FIA) enforces a rulebook ensuring safe and fair competition. Over the past two decades the FIA regulations have directly affected the aerodynamic design of the cars.
@@ -70,7 +84,7 @@ Formula 1 is the pinnacle of motorsports with roughly 800 million fans worldwide
 </div>
 
 
-<h3 id="Regulations">2.1 – 2009 Regulations</h3>
+<h3 id="2.1 2009">2.1 – 2009</h3>
 <div class="ex1">
 <p>
 The 2009 regulations were introduced (Fédération Internationale de l'Automobile, 2009) primarily to reduce the wake from a leading car to improve overtaking. The biggest changes include:
