Creating the separate sections

--- a/index.html
+++ b/index.html
@@ -97,7 +97,21 @@ The 2009 regulations were introduced (Fédération Internationale de l'Automobil
 <p>
 These changes led to whole car redesigns to balance the front and rear downforce. Teams focused innovation on diffuser interactions.
 </p>
+
+<h3 id="2.2 2022">2.2 2022</h3>
+<div class="ex1">
 <p>
+
+</p>
+</div>
+
+<h3 id="2.3 2026">2.3 2026</h3>
+<div class="ex1">
+<p>
+
+</p>
+</div>
+  
 </body>
 
 
