Adding a reference heading

--- a/index.html
+++ b/index.html
@@ -111,6 +111,13 @@ These changes led to whole car redesigns to balance the front and rear downforce
 
 </p>
 </div>
+
+<h3 id="References">References</h3>
+<div class="ex1">
+<p>
+
+</p>
+</div>
   
 </body>
 
