Adding most of the content

--- a/index.html
+++ b/index.html
@@ -101,20 +101,38 @@ These changes led to whole car redesigns to balance the front and rear downforce
 <h3 id="2.2 2022">2.2 2022</h3>
 <div class="ex1">
 <p>
-
+The 2022 technical regulations represented the biggest aerodynamic reset since 1983, reintroducing ground-effect principles for the first time in 40 years (FIA, 2021). The FIA’s objective was to reduce the aerodynamic wake produced by the upper-body surfaces of the car, enabling closer racing and decreasing the lap-time penalty when following.
+Key regulatory changes included:
+</p>
+<ul>
+  <li>simplified front wings with reduced outwash</li>
+  <li>Fully shaped venturi tunnels under the floor</li>
+  <li>Re-introduced wheel covers and new wheel-wake deflectors</li>
+  <li>A taller, simpler rear wing designed to redirect wake upwards</li>
+</ul>
+<p>
+By shifting downforce generation to the floor rather than vortices and appendages on the upper body, teams were forced to redesign their aerodynamic philosophies. Traditional bargeboard-driven outwash systems were banned entirely, pushing teams to focus on underfloor sealing, tunnel throat height, and ride-height management.
+The result was improved raceability, with cars losing approximately 15% downforce when following, compared to up to 45% pre-2022 (FIA, 2022).
 </p>
 </div>
 
 <h3 id="2.3 2026">2.3 2026</h3>
 <div class="ex1">
 <p>
-
+The 2026 regulations will introduce smaller, lighter cars with active aerodynamics, reduced ground effect and lower drag and downforce. These changes will be implemented in order to make cars more agile to allow for closer racing without relying on the Drag Reduction System (DRS). 
 </p>
 </div>
 
 <h3 id="References">References</h3>
 <div class="ex1">
 <p>
+Brittle, C. (2025) ‘F1 sees global fanbase increase 12% to 826.5m in 2024’, SportsPro, 20 March. Available at: https://www.sportspro.com/news/f1-global-fanbase-tv-viewership-2024-season-nielsen-sports-march-2025/ 
+
+Fédération Internationale de l'Automobile (FIA) (2009) 2009 Formula One Technical Regulations: Showing Alterations 17 March 2009. Available at: https://argent.fia.com/web/fia-public.nsf/7C4F8D883039AF6AC125757D00369C58/$FILE/1-2009_F1_TECHNICAL_REGULATIONS_Showing-Alterations_17-03-2009.pdf 
+
+Bhatnagar, U. R. (2014) Formula 1 race car performance improvement by optimization of the aerodynamic relationship between the front and rear wings. MSc thesis. Pennsylvania State University. Available at: https://etda.libraries.psu.edu/files/final_submissions/9695 
+
+Toet, W. (2017) Willem Toet explains motorsport diffusers. Race Tech Magazine, 8 August. Available at: https://www.racetechmag.com/2017/08/willem-toet-explains-motorsport-diffusers/ 
 
 </p>
 </div>
