--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@ The 2009 regulations were introduced (Fédération Internationale de l'Automobil
 <p>
 These changes led to whole car redesigns to balance the front and rear downforce. Teams focused innovation on diffuser interactions.
 </p>
+<img src="Fig2009Drag.png" alt="Figure2.1: Breakdown of drag and downforce for individual components of 2009 F1 car (Toet, 2013), (Bhatnagar, 2014)
+" width="600" height="300" >
+
+
 
 <h3 id="2.2 2022">2.2 2022</h3>
 <div class="ex1">
