--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ The 2009 regulations were introduced (Fédération Internationale de l'Automobil
 <p>
 These changes led to whole car redesigns to balance the front and rear downforce. Teams focused innovation on diffuser interactions.
 </p>
-<img src="Fig2009Drag.png" alt="Figure2.1: Breakdown of drag and downforce for individual components of 2009 F1 car (Toet, 2013), (Bhatnagar, 2014)
+<img src="Fig2009Drag.PNG" alt="Figure2.1: Breakdown of drag and downforce for individual components of 2009 F1 car (Toet, 2013), (Bhatnagar, 2014)
 " width="600" height="300" >
 
 
