Adding more text to 2.1 section

--- a/index.html
+++ b/index.html
@@ -99,6 +99,14 @@ These changes led to whole car redesigns to balance the front and rear downforce
 </p>
 <img src="Fig2009Drag.PNG" alt="Figure2.1: Breakdown of drag and downforce for individual components of 2009 F1 car (Toet, 2013), (Bhatnagar, 2014)
 " width="600" height="300" >
+<p>
+  Fig 2.1: Breakdown of drag and downforce for individual components of 2009 F1 car (Toet, 2013), (Bhatnagar, 2014)
+</p>
+<p>
+  The front wing generates around 30% of a Formula 1 car’s total downforce, while the rear wing accounts for roughly 25% (Toet, 2013). The front wing is crucial for turning while the rear wing trades rear stability for drag. Any reduction in rear downforce to improve straightline speed therefore needs recovery from the diffuser to preserve balance. 
+  The restrictions placed on the surface appendages is what led to this diffuser focus. The diffuser converts underfloor low pressure into downforce. Vortices were used to seal the now forbidden appendages improving diffuser performance in yaw (Toet, 2017). “Sealing” refers to using vortices to create a virtual barrier that reduces air leakage under the floor.
+</p>
+
 
 
 
