Changing the text style of the figure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   
 <head>
-  <img src="WebBanner2023.png" alt="Banner" width="900" height="300" >
+  <img src="WebBanner2023.png" alt="Banner" width="1200" height="300" >
     <h1><b>ENG0018 Computer Laboratory 2025/26<b></h1>
     <h2>Student URN: 6614299</h2>
   <hr>
@@ -67,6 +67,14 @@
 
 <body style="background-color:#FFFFFF;margin-left:50px;">
 
+.fig-caption {
+  font-size: 0.85em;
+  font-style: italic;
+  text-align: center;
+  color: #555;
+  margin-top: 5px;
+}
+
 
 <h3 id="Abstract">Abstract</h3>
 <div class="ex1">
@@ -99,7 +107,7 @@ These changes led to whole car redesigns to balance the front and rear downforce
 </p>
 <img src="Fig2009Drag.PNG" alt="Figure2.1: Breakdown of drag and downforce for individual components of 2009 F1 car (Toet, 2013), (Bhatnagar, 2014)
 " width="600" height="300" >
-<p>
+<p class="fig-caption">
   Fig 2.1: Breakdown of drag and downforce for individual components of 2009 F1 car (Toet, 2013), (Bhatnagar, 2014)
 </p>
 <p>
