Beginning to add the references and links

--- a/index.html
+++ b/index.html
@@ -67,13 +67,7 @@
 
 <body style="background-color:#FFFFFF;margin-left:50px;">
 
-.fig-caption {
-  font-size: 0.85em;
-  font-style: italic;
-  text-align: center;
-  color: #555;
-  margin-top: 5px;
-}
+
 
 
 <h3 id="Abstract">Abstract</h3>
@@ -107,7 +101,7 @@ These changes led to whole car redesigns to balance the front and rear downforce
 </p>
 <img src="Fig2009Drag.PNG" alt="Figure2.1: Breakdown of drag and downforce for individual components of 2009 F1 car (Toet, 2013), (Bhatnagar, 2014)
 " width="600" height="300" >
-<p class="fig-caption">
+<p>
   Fig 2.1: Breakdown of drag and downforce for individual components of 2009 F1 car (Toet, 2013), (Bhatnagar, 2014)
 </p>
 <p>
@@ -145,8 +139,20 @@ The 2026 regulations will introduce smaller, lighter cars with active aerodynami
 
 <h3 id="References">References</h3>
 <div class="ex1">
-<p>
 
+<p>
+  Brittle, C. (2025) ‘F1 sees global fanbase increase 12% to 826.5m in 2024’, <i>SportsPro</i>, 20 March. 
+  Available at: 
+  <a href="https://www.sportspro.com/news/f1-global-fanbase-tv-viewership-2024-season-nielsen-sports-march-2025/">
+    https://www.sportspro.com/news/f1-global-fanbase-tv-viewership-2024-season-nielsen-sports-march-2025/
+  </a>
+</p>
+<p>
+  Fédération Internationale de l'Automobile (FIA) (2009) 2009 Formula One Technical Regulations: Showing Alterations 17 March 2009.
+  Available at:
+  <a href="https://argent.fia.com/web/fia-public.nsf/7C4F8D883039AF6AC125757D00369C58/$FILE/1-2009_F1_TECHNICAL_REGULATIONS_Showing-Alterations_17-03-2009.pdf">
+    https://argent.fia.com/web/fia-public.nsf/7C4F8D883039AF6AC125757D00369C58/$FILE/1-2009_F1_TECHNICAL_REGULATIONS_Showing-Alterations_17-03-2009.pdf
+  </a>
 </p>
 </div>
   
