Correcting the blue hyperlinks

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   <h2 style="font-family:calibri;"><b>Conference paper: How FIA regulations shape the evolution of aerodynamics in Formula 1</b></h2>
   <hr>
 
-  a {
+  <style>
+    a {
   color: blue;
   text-decoration: underline;
 }
+  </style>
 
   <!style for tables>
       <style>
