--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   text-decoration: underline;
 }
   </style>
+
+<title>How FIA regulations shape the evolution of aerodynamics in Formula 1</title>
   
   <img src="WebBanner2023.png" alt="Banner" width="1200" height="300" >
     <h1><b>ENG0018 Computer Laboratory 2025/26<b></h1>
