--- a/index.html
+++ b/index.html
@@ -145,11 +145,15 @@ The result was improved raceability, with cars losing approximately 15% downforc
 <div class="ex1">
 <p>
   The 2026 regulations will introduce smaller, lighter cars with active aerodynamics, reduced ground effect and lower drag and downforce (FIA 2025). These changes will be implemented in order to make cars more agile to allow for closer racing without relying on the Drag Reduction System (DRS). 
-  
+</p>
+<p>
   Active aerodynamics refers to the ability for the front and rear wings to switch between high downforce and low drag modes depending on which part of the track the driver is on. This will act as a replacement for the current DRS. In a high downforce mode the car will be better at cornering where as in a low drag mode the car will perform better on straights.
 </p>
 <img src="Fig2026XZMode.png" alt="Figure2.3: First look how active aero will work on the 2026 F1 cars. Credits: qvistdesigns"
 " width="600" height="400" >
+<p>
+  Figure2.3: First look how active aero will work on the 2026 F1 cars. Credits: qvistdesigns
+</p>
 <p>
   In Z-Mode the wings are closed. This generates more downforce. In X-Mode the flaps can open on the rear and front wings. This reduces drag.
 
