First attempt at in text citation links

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@ These changes led to whole car redesigns to balance the front and rear downforce
 <img src="Fig2009Drag.PNG" alt="Figure2.1: Breakdown of drag and downforce for individual components of 2009 F1 car (Toet, 2013), (Bhatnagar, 2014)
 " width="600" height="300" >
 <p>
-  Fig 2.1: Breakdown of drag and downforce for individual components of 2009 F1 car (Toet, 2013), (Bhatnagar, 2014)
+  Fig 2.1: Breakdown of drag and downforce for individual components of 2009 F1 car (<td><a href="Toet, W. (2017) Willem Toet explains motorsport diffusers. Race Tech Magazine, 8 August. 
+  Available at: ">Toet,2013</td>), (Bhatnagar, 2014)
 </p>
 <p>
   The front wing generates around 30% of a Formula 1 car’s total downforce, while the rear wing accounts for roughly 25% (Toet, 2013). The front wing is crucial for turning while the rear wing trades rear stability for drag. Any reduction in rear downforce to improve straightline speed therefore needs recovery from the diffuser to preserve balance. 
