Second attempt at in text hyperlink

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ This paper will address some of the regulation changes that most directly affect
 <h3 id="1. Introduction">1. Introduction</h3>
 <div class="ex1">
 <p>
-Formula 1 is the pinnacle of motorsports with roughly 800 million fans worldwide (Brittle, 2025). In this sport, the slightest changes to the vehicle can drastically change the outcome of a race. The Fédération Internationale de l'Automobile (FIA) enforces a rulebook ensuring safe and fair competition. Over the past two decades the FIA regulations have directly affected the aerodynamic design of the cars.
+Formula 1 is the pinnacle of motorsports with roughly 800 million fans worldwide (<a href="Brittle 2025">Brittle, 2025). In this sport, the slightest changes to the vehicle can drastically change the outcome of a race. The Fédération Internationale de l'Automobile (FIA) enforces a rulebook ensuring safe and fair competition. Over the past two decades the FIA regulations have directly affected the aerodynamic design of the cars.
 </p>
 </div>
 
@@ -113,8 +113,7 @@ These changes led to whole car redesigns to balance the front and rear downforce
 <img src="Fig2009Drag.PNG" alt="Figure2.1: Breakdown of drag and downforce for individual components of 2009 F1 car (Toet, 2013), (Bhatnagar, 2014)
 " width="600" height="300" >
 <p>
-  Fig 2.1: Breakdown of drag and downforce for individual components of 2009 F1 car (<td><a href="#Toet, W. (2017) Willem Toet explains motorsport diffusers. Race Tech Magazine, 8 August. 
-  Available at: ">Toet,2013</td>), (Bhatnagar, 2014)
+  Fig 2.1: Breakdown of drag and downforce for individual components of 2009 F1 car (Toet,2013), (Bhatnagar, 2014)
 </p>
 <p>
   The front wing generates around 30% of a Formula 1 car’s total downforce, while the rear wing accounts for roughly 25% (Toet, 2013). The front wing is crucial for turning while the rear wing trades rear stability for drag. Any reduction in rear downforce to improve straightline speed therefore needs recovery from the diffuser to preserve balance. 
@@ -166,8 +165,8 @@ The result was improved raceability, with cars losing approximately 15% downforc
 <div class="ex1">
 
   
-<p>
-  Brittle, C. (2025) ‘F1 sees global fanbase increase 12% to 826.5m in 2024’, <i>SportsPro</i>, 20 March. 
+<p id="Brittle 2025">Brittle, C. (2025)
+   ‘F1 sees global fanbase increase 12% to 826.5m in 2024’, <i>SportsPro</i>, 20 March. 
   Available at: 
   <a href="https://www.sportspro.com/news/f1-global-fanbase-tv-viewership-2024-season-nielsen-sports-march-2025/">
     https://www.sportspro.com/news/f1-global-fanbase-tv-viewership-2024-season-nielsen-sports-march-2025/
