--- a/index.html
+++ b/index.html
@@ -164,14 +164,14 @@ The result was improved raceability, with cars losing approximately 15% downforc
 <h3 id="References">References</h3>
 <div class="ex1">
 
-  
-<p id="Brittle 2025">Brittle, C. (2025)
-   ‘F1 sees global fanbase increase 12% to 826.5m in 2024’, <i>SportsPro</i>, 20 March. 
-  Available at: 
-  <a href="https://www.sportspro.com/news/f1-global-fanbase-tv-viewership-2024-season-nielsen-sports-march-2025/">
-    https://www.sportspro.com/news/f1-global-fanbase-tv-viewership-2024-season-nielsen-sports-march-2025/
-  </a>
+<p id="ref-brittle-2025">
+Brittle, C. (2025) ‘F1 sees global fanbase increase 12% to 826.5m in 2024’, <i>SportsPro</i>, 20 March. 
+Available at: 
+<a href="https://www.sportspro.com/news/f1-global-fanbase-tv-viewership-2024-season-nielsen-sports-march-2025/">
+  https://www.sportspro.com/news/f1-global-fanbase-tv-viewership-2024-season-nielsen-sports-march-2025/
+</a>
 </p>
+
   
 <p>
   Fédération Internationale de l'Automobile (FIA) (2009) 2009 Formula One Technical Regulations: Showing Alterations 17 March 2009.
