Giving up on in text hyperlinks

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ This paper will address some of the regulation changes that most directly affect
 <h3 id="1. Introduction">1. Introduction</h3>
 <div class="ex1">
 <p>
-Formula 1 is the pinnacle of motorsports with roughly 800 million fans worldwide (<a href="Brittle 2025">Brittle, 2025). In this sport, the slightest changes to the vehicle can drastically change the outcome of a race. The Fédération Internationale de l'Automobile (FIA) enforces a rulebook ensuring safe and fair competition. Over the past two decades the FIA regulations have directly affected the aerodynamic design of the cars.
+Formula 1 is the pinnacle of motorsports with roughly 800 million fans worldwide (Brittle, 2025). In this sport, the slightest changes to the vehicle can drastically change the outcome of a race. The Fédération Internationale de l'Automobile (FIA) enforces a rulebook ensuring safe and fair competition. Over the past two decades the FIA regulations have directly affected the aerodynamic design of the cars.
 </p>
 </div>
 
@@ -164,7 +164,7 @@ The result was improved raceability, with cars losing approximately 15% downforc
 <h3 id="References">References</h3>
 <div class="ex1">
 
-<p id="ref-brittle-2025">
+<p>
 Brittle, C. (2025) ‘F1 sees global fanbase increase 12% to 826.5m in 2024’, <i>SportsPro</i>, 20 March. 
 Available at: 
 <a href="https://www.sportspro.com/news/f1-global-fanbase-tv-viewership-2024-season-nielsen-sports-march-2025/">
@@ -172,7 +172,6 @@ Available at:
 </a>
 </p>
 
-  
 <p>
   Fédération Internationale de l'Automobile (FIA) (2009) 2009 Formula One Technical Regulations: Showing Alterations 17 March 2009.
   Available at:
