Second try at this

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   
 <head>
     <style>
-    a {
-  color: blue;
-  text-decoration: underline;
+.content-frame {
+  max-width: 1200px;           /* keeps content centered */
+  margin: 20px;                /* space from browser edges */
+  padding: 30px;               /* space inside the frame */
+  border: 4px solid #333;      /* main border color and thickness */
+  border-radius: 15px;         /* rounded corners */
+  background-color: #fefefe;   /* subtle background */
+  box-shadow: 0 0 15px rgba(0,0,0,0.2); /* soft shadow for depth */
 }
   </style>
 
