Fixing formatting of the page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <style>
 .content-frame {
-  max-width: 1200px;           /* keeps content centered */
+  max-width: 800px;           /* keeps content centered */
   margin: 20px;                /* space from browser edges */
   padding: 30px;               /* space inside the frame */
   border: 4px solid #333;      /* main border color and thickness */
@@ -13,7 +13,17 @@
   background-color: #fefefe;   /* subtle background */
   box-shadow: 0 0 15px rgba(0,0,0,0.2); /* soft shadow for depth */
 }
-  </style>
+.content-frame img {
+            width: 100%;
+            height: auto;
+            display: block;
+            margin-bottom: 20px;
+            border-radius: 10px;
+}
+     h1, h2, h3 {
+            margin: 10px 0;
+        }
+    </style>
 
 <title>How FIA regulations shape the evolution of aerodynamics in Formula 1</title>
   
