--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <head>
     <style>
 .content-frame {
-  max-width: 800px;           /* keeps content centered */
-  margin: 20px;                /* space from browser edges */
+  max-width: 1200px;           /* keeps content centered */
+  margin: 20px auto;                /* space from browser edges */
   padding: 30px;               /* space inside the frame */
   border: 4px solid #333;      /* main border color and thickness */
   border-radius: 15px;         /* rounded corners */
