--- a/index.html
+++ b/index.html
@@ -4,26 +4,11 @@
   
 <head>
     <style>
-.content-frame {
-  max-width: 1200px;           /* keeps content centered */
-  margin: 20px auto;                /* space from browser edges */
-  padding: 30px;               /* space inside the frame */
-  border: 4px solid #333;      /* main border color and thickness */
-  border-radius: 15px;         /* rounded corners */
-  background-color: #fefefe;   /* subtle background */
-  box-shadow: 0 0 15px rgba(0,0,0,0.2); /* soft shadow for depth */
+    a {
+  color: blue;
+  text-decoration: underline;
 }
-.content-frame img {
-            width: 100%;
-            height: auto;
-            display: block;
-            margin-bottom: 20px;
-            border-radius: 10px;
-}
-     h1, h2, h3 {
-            margin: 10px 0;
-        }
-    </style>
+  </style>
 
 <title>How FIA regulations shape the evolution of aerodynamics in Formula 1</title>
   
@@ -91,28 +76,29 @@
 .mySlides {display:none;}
 </style>
 
-<body style="background-color:#FFFFFF; margin:0; display:flex; justify-content:center;">
-  <div class="content-frame">
+<body style="background-color:#FFFFFF;margin-left:50px;">
+
+
 
 
 <h3 id="Abstract">Abstract</h3>
-
+<div class="ex1">
 <pre>
 This paper will address some of the regulation changes that most directly affect aerodynamics brought in by the FIA in the last 20 years. It will delve into how teams have adapted in response to these changes and discuss implications of these new designs. It will also consider a future rule change that will come into effect in the 2026 season.
 </pre>
-
+</div>
 
 
 <h3 id="1. Introduction">1. Introduction</h3>
-
+<div class="ex1">
 <p>
 Formula 1 is the pinnacle of motorsports with roughly 800 million fans worldwide (Brittle, 2025). In this sport, the slightest changes to the vehicle can drastically change the outcome of a race. The Fédération Internationale de l'Automobile (FIA) enforces a rulebook ensuring safe and fair competition. Over the past two decades the FIA regulations have directly affected the aerodynamic design of the cars.
 </p>
-
+</div>
 
 
 <h3 id="2.1 2009">2.1 – 2009</h3>
-
+<div class="ex1">
 <p>
 The 2009 regulations were introduced (Fédération Internationale de l'Automobile, 2009) primarily to reduce the wake from a leading car to improve overtaking. The biggest changes include:
 </p>
@@ -138,7 +124,7 @@ These changes led to whole car redesigns to balance the front and rear downforce
 
 
 <h3 id="2.2 2022">2.2 2022</h3>
-
+<div class="ex1">
 <p>
 The 2022 technical regulations represented the biggest aerodynamic reset since 1983, reintroducing ground-effect principles for the first time in 40 years (FIA, 2021). The FIA’s objective was to reduce the aerodynamic wake produced by the upper-body surfaces of the car, enabling closer racing and decreasing the lap-time penalty when following.
 Key regulatory changes included:
@@ -153,10 +139,10 @@ Key regulatory changes included:
 By shifting downforce generation to the floor rather than vortices and appendages on the upper body, teams were forced to redesign their aerodynamic philosophies. Traditional bargeboard-driven outwash systems were banned entirely, pushing teams to focus on underfloor sealing, tunnel throat height, and ride-height management.
 The result was improved raceability, with cars losing approximately 15% downforce when following, compared to up to 45% pre-2022 (FIA, 2022).
 </p>
-
+</div>
 
 <h3 id="2.3 2026">2.3 2026</h3>
-
+<div class="ex1">
 <p>
   The 2026 regulations will introduce smaller, lighter cars with active aerodynamics, reduced ground effect and lower drag and downforce (FIA 2025). These changes will be implemented in order to make cars more agile to allow for closer racing without relying on the Drag Reduction System (DRS). 
 </p>
@@ -173,10 +159,10 @@ The result was improved raceability, with cars losing approximately 15% downforc
 
   Due to a lower overall downforce, there will be a greater focus on mechanical grip from the tyre mechanics and suspension settings to ensure stability through corners. In effect, the car's handling will rely more on how well the tires stay connected to the track (F1 2025). 
 </p>
-
+</div>
 
 <h3 id="References">References</h3>
-
+<div class="ex1">
 
 <p>
 Brittle, C. (2025) ‘F1 sees global fanbase increase 12% to 826.5m in 2024’, <i>SportsPro</i>, 20 March. 
