Fixing time stamp

--- a/index.html
+++ b/index.html
@@ -225,8 +225,8 @@ Available at:
 </button>
 <script>
     async function getLastUpdatedTime() {
-        const username = 'nr0025';
-        const repo = 'FY0025';
+        const username = 'FEPSFY6914299';
+        const repo = 'FY6914299';
        
         const url = `https://api.github.com/repos/${username}/${repo}/commits`;
         try {
