--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <html>
   
 <head>
-    <style>
-    a {
-  color: blue;
-  text-decoration: underline;
+    .centerText {
+  width: 80%;
+  margin: 0 auto;
 }
   </style>
 
