--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <html>
   
 <head>
-    .centerText {
-  width: 80%;
-  margin: 0 auto;
+<style>
+  .center-box {
+  width: 80%;         /* or any width you want */
+  margin: 0 auto;     /* auto left + right margins centers the box */
 }
-  </style>
+</style>
 
 <title>How FIA regulations shape the evolution of aerodynamics in Formula 1</title>
   
