Still trying to change the margin

--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
 <html>
   
 <head>
-<style>
-  .center-box {
-  width: 80%;         /* or any width you want */
-  margin: 0 auto;     /* auto left + right margins centers the box */
-}
-</style>
+
 
 <title>How FIA regulations shape the evolution of aerodynamics in Formula 1</title>
   
@@ -38,7 +33,7 @@
 
       <style>
     p.ex1 {
-      margin 0 left: 250px;
+      margin: 0 50 0 250px;
     }
   </style>
     </head>
