--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <style>
     p.ex1 {
-      margin: 0 50 0 250px;
+      margin: 0 300 0 300px;
     }
   </style>
     </head>
@@ -106,7 +106,7 @@ The 2009 regulations were introduced (Fédération Internationale de l'Automobil
 These changes led to whole car redesigns to balance the front and rear downforce. Teams focused innovation on diffuser interactions.
 </p>
 <img src="Fig2009Drag.PNG" alt="Figure2.1: Breakdown of drag and downforce for individual components of 2009 F1 car (Toet, 2013), (Bhatnagar, 2014)
-" width="600" height="300" >
+" width="600" height="300" style=”border:5px solid #000000; padding:3px; margin:5px”>
 <p>
   Fig 2.1: Breakdown of drag and downforce for individual components of 2009 F1 car (Toet,2013), (Bhatnagar, 2014)
 </p>
@@ -145,7 +145,7 @@ The result was improved raceability, with cars losing approximately 15% downforc
   Active aerodynamics refers to the ability for the front and rear wings to switch between high downforce and low drag modes depending on which part of the track the driver is on. This will act as a replacement for the current DRS. In a high downforce mode the car will be better at cornering where as in a low drag mode the car will perform better on straights.
 </p>
 <img src="Fig2026XZMode.png" alt="Figure2.3: First look how active aero will work on the 2026 F1 cars. Credits: qvistdesigns"
-" width="600" height="400" >
+" width="600" height="400" style=”border:5px solid #000000; padding:3px; margin:5px”>
 <p>
   Figure2.3: First look how active aero will work on the 2026 F1 cars. Credits: qvistdesigns
 </p>
