--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <style>
     p.ex1 {
-      margin: 0 300 0 300px;
+      margin-left: 100px;
     }
   </style>
     </head>
@@ -71,7 +71,7 @@
 .mySlides {display:none;}
 </style>
 
-<body style="background-color:#FFFFFF;margin:0 300 0 300px;">
+<body style="background-color:#FFFFFF;margin-left: 100px;margin-right: 100px;">
 
 
 
