--- a/index.html
+++ b/index.html
@@ -280,10 +280,12 @@ Available at:
   // Function to calculate and display total word count from selected sections
   function displayTotalWordCount() {
     // Calculate word count for each section and accumulate the total
-    const IntroductionCount = displayWordCount("Introduction_InText");
-    const AnalysisCount = displayWordCount("Analysis_InText");
+    const IntroductionCount = displayWordCount("1. Introduction");
+    const Text2009Count = displayWordCount("2.1 2009");
+    const Text2022Count = displayWordCount("2.2 2022");
+    const Text2026Count = displayWordCount("2.3 2026");
     // Calculate the sum of all selected sections
-    const totalWordCount = IntroductionCount + AnalysisCount;
+    const totalWordCount = IntroductionCount + Text2009Count + Text2022Count + Text2026Count;
     // Display the total word count
     document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
   }
