--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@ This paper will address some of the regulation changes that most directly affect
 </p>
 </div>
 
+</body>
+
+<body id="WordCount">
 
 <h3 id="1. Introduction">1. Introduction</h3>
 <div class="ex1">
@@ -283,7 +286,7 @@ Available at:
     const IntroductionCount = displayWordCount("1. Introduction");
     const Text2009Count = displayWordCount("2.1 2009");
     const Text2022Count = displayWordCount("2.2 2022");
-    const Text2026Count = displayWordCount("2.3 2026");
+    const Text2026Count = displayWordCount("WordCount");
     // Calculate the sum of all selected sections
     const totalWordCount = IntroductionCount + Text2009Count + Text2022Count + Text2026Count;
     // Display the total word count
