--- a/index.html
+++ b/index.html
@@ -283,12 +283,9 @@ Available at:
   // Function to calculate and display total word count from selected sections
   function displayTotalWordCount() {
     // Calculate word count for each section and accumulate the total
-    const IntroductionCount = displayWordCount("1. Introduction");
-    const Text2009Count = displayWordCount("2.1 2009");
-    const Text2022Count = displayWordCount("2.2 2022");
-    const Text2026Count = displayWordCount("WordCount");
+    const WordCount = displayWordCount("WordCount");
     // Calculate the sum of all selected sections
-    const totalWordCount = IntroductionCount + Text2009Count + Text2022Count + Text2026Count;
+    const totalWordCount = WordCount;
     // Display the total word count
     document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
   }
