removing references from word count

--- a/index.html
+++ b/index.html
@@ -159,6 +159,9 @@ The result was improved raceability, with cars losing approximately 15% downforc
 </p>
 </div>
 
+</body>
+<body>
+  
 <h3 id="References">References</h3>
 <div class="ex1">
 
