--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <h3 id="Abstract">Abstract</h3>
 <div class="ex1">
 <p>
-This paper will address some of the regulation changes that most directly affect aerodynamics brought in by the FIA in the last 20 years. It will delve into how teams have adapted in response to these changes and discuss implications of these new designs. It will also consider a future rule change that will come into effect in the 2026 season.
+This paper addresses some of the regulation changes that most directly affect aerodynamics brought in by the FIA in the last two decades. It will delve into how teams have adapted in response to these changes and discuss implications of these new designs.  It will also consider a future rule change that will come into effect in the 2026 season. 
 </p>
 </div>
 
@@ -148,7 +148,7 @@ The result was improved raceability, with cars losing approximately 15% downforc
   Active aerodynamics refers to the ability for the front and rear wings to switch between high downforce and low drag modes depending on which part of the track the driver is on. This will act as a replacement for the current DRS. In a high downforce mode the car will be better at cornering where as in a low drag mode the car will perform better on straights.
 </p>
 <img src="Fig2026XZMode.png" alt="Figure2.3: First look how active aero will work on the 2026 F1 cars. Credits: qvistdesigns"
-" width="600" height="400">
+" width="500" height="300">
 <p>
   Figure2.3: First look how active aero will work on the 2026 F1 cars. Credits: qvistdesigns
 </p>
