Fixing word count

--- a/index.html
+++ b/index.html
@@ -71,8 +71,6 @@
 .mySlides {display:none;}
 </style>
 
-<body style="background-color:#FFFFFF;margin-left: 100px;margin-right: 100px;">
-
 
 
 
@@ -83,9 +81,8 @@ This paper addresses some of the regulation changes that most directly affect ae
 </p>
 </div>
 
-</body>
+<body id="WordCount" style="background-color:#FFFFFF;margin-left: 100px;margin-right: 100px;">
 
-<body id="WordCount">
 
 <h3 id="1. Introduction">1. Introduction</h3>
 <div class="ex1">
