--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <img src="WebBanner2023.png" alt="Banner" width="1200" height="300" >
     <h1><b>ENG0018 Computer Laboratory 2025/26<b></h1>
     <h2>Student URN: 6914299</h2>
-  <hr>
+  <hr style="border: 0; height: 3px; background-color: orange;">
   <h2 style="font-family:calibri;"><b>Conference paper: How FIA regulations shape the evolution of aerodynamics in Formula 1</b></h2>
-  <hr>
+  <hr style="border: 0; height: 3px; background-color: orange;">
 
 
 
@@ -71,7 +71,7 @@
 .mySlides {display:none;}
 </style>
 
-<body style="background-color:#FFFFFF;margin-left: 100px;margin-right: 100px;">
+<body style="background-color:#F5F5DC;margin-left: 100px;margin-right: 100px;">
 
 
 
