Changing back to white and adding more hr lines

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 .mySlides {display:none;}
 </style>
 
-<body style="background-color:#F5F5DC;margin-left: 100px;margin-right: 100px;">
+<body style="background-color:#FFFFFF;margin-left: 100px;margin-right: 100px;">
 
 
 
@@ -216,6 +216,8 @@ Available at:
 </div>
 
 </body>
+
+<hr style="border: 0; height: 3px; background-color: orange;">
 
 <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ////////////////////////////// Adding last update ////////////////////////////// -->
