--- a/index.html
+++ b/index.html
@@ -217,8 +217,9 @@ Available at:
 
 </body>
 
-<hr style="border: 0; height: 3px; background-color: orange;">
 
+<footer class="bottom-footer">
+    
 <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ////////////////////////////// Adding last update ////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
@@ -300,4 +301,7 @@ Available at:
   window.onload = displayTotalWordCount;
 </script>
 
+</footer>
+  
 </html>
+
