Little information on venturi tunnels

--- a/index.html
+++ b/index.html
@@ -133,6 +133,9 @@ Key regulatory changes included:
   <li>A taller, simpler rear wing designed to redirect wake upwards</li>
 </ul>
 <p>
+  Venturi tunnels work by narrowing the airflow under the car so the air speeds up and the pressure drops, creating strong ground-effect downforce. As the tunnel widens again at the diffuser, the airflow slows and helps pull more air through the system, producing efficient downforce with relatively low drag.
+</p>
+<p>
 By shifting downforce generation to the floor rather than vortices and appendages on the upper body, teams were forced to redesign their aerodynamic philosophies. Traditional bargeboard-driven outwash systems were banned entirely, pushing teams to focus on underfloor sealing, tunnel throat height, and ride-height management.
 The result was improved raceability, with cars losing approximately 15% downforce when following, compared to up to 45% pre-2022 (FIA, 2022).
 </p>
