Adding my video

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
   </style>
     </head>
 
-
+<video width="640" height="360" controls>
+  <source src="F1ConferenceProjectPresentation.mp4" type="video/mp4">
+  Your browser does not support the video tag.
+</video>
+      
 <!table of contents>
 <table>
   <tr>
